Fin del día. En principio no parece que haya ningún error en el método hesitant pero algunas valoraciones no salen correctamente.